Fixed listing title overflow; thanks Alan

--- a/project/blog/static/blog/content/site.css
+++ b/project/blog/static/blog/content/site.css
@@ -63,3 +63,11 @@ input[type="checkbox"].input-validation-error {
 	height: 40%;
 	visibility: hidden;
 }
+
+.listing h1 {
+	overflow: auto;
+}
+
+.thumbnail .caption h3 {
+	overflow: auto;
+}
